--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <button onclick="showMaterials('russian')">Русский язык</button>
     <button onclick="showMaterials('belarusian')">Белорусский язык</button>
     <button onclick="showMaterials('gamification')">Игровое мышление</button>
+    <button onclick="showMaterials('Generators')">Генераторы задач</button>
 </nav>
 
 <div id="content">
