--- a/materials/Generators/GeneratorPrimerov/index.html
+++ b/materials/Generators/GeneratorPrimerov/index.html
@@ -27,7 +27,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 30px;
-            max-width: 1000px;
+            max-width: 1300px;
             width: 100%;
         }
 
@@ -74,6 +74,7 @@
         /* Цветовые акценты */
         .card.div .icon { color: #FF9800; }
         .card.mul .icon { color: #2196F3; }
+        .card.miv .icon { color: #5df321; }
         .card.nam .icon { color: #9C27B0; }
         
     </style>
@@ -87,6 +88,12 @@
             <span class="icon">➗</span>
             <span class="title">Деление уголком</span>
             <span class="desc">Генерация примеров на деление без остатка. Настройка разрядности.</span>
+        </a>
+
+        <a href="multiDivid.html" class="card miv">
+            <span class="icon">✖️➗</span>
+            <span class="title">Умножение Деление</span>
+            <span class="desc">Умножение в строчку. Деление, деление с остатком. Настройка количества знаков.</span>
         </a>
 
         <a href="multiplication.html" class="card mul">
