--- a/materials/Generators/GeneratorPrimerov/divide.html
+++ b/materials/Generators/GeneratorPrimerov/divide.html
@@ -140,7 +140,9 @@
                 <option value="2-1">2 знака / 1 знак</option>
                 <option value="3-1">3 знака / 1 знак</option>
                 <option value="3-2">3 знака / 2 знака</option>
+                <option value="4-1">4 знака / 1 знак</option>
                 <option value="4-2">4 знака / 2 знака</option>
+                <option value="5-1">5 знаков / 1 знак</option>
                 <option value="5-2">5 знаков / 2 знака</option>
             </select>
         </div>
