--- a/materials/Generators/GeneratorPrimerov/divide.html
+++ b/materials/Generators/GeneratorPrimerov/divide.html
@@ -140,9 +140,7 @@
                 <option value="2-1">2 знака / 1 знак</option>
                 <option value="3-1">3 знака / 1 знак</option>
                 <option value="3-2">3 знака / 2 знака</option>
-                <option value="4-1">4 знака / 1 знак</option>
                 <option value="4-2">4 знака / 2 знака</option>
-                <option value="5-1">5 знаков / 1 знак</option>
                 <option value="5-2">5 знаков / 2 знака</option>
             </select>
         </div>
@@ -465,14 +463,17 @@ function generateSingleProblemSVG(data, xOffset, yOffset, cellSize, rows) {
     const divStr = data.dividend.toString();
     const divisStr = data.divisor.toString();
     const totalCols = divStr.length + divisStr.length;
+    const extraCols = 3; // Добавляем 3 пустых колонки справа
+    const totalColsWithExtra = totalCols + extraCols;
+    
     let g = `<g transform="translate(${xOffset}, ${yOffset})">`; // Контейнер для одного примера
 
-    // 1. Рисуем сетку (11 строк вниз)
+    // 1. Рисуем сетку (11 строк вниз, но шире на 3 колонки)
     for (let r = 0; r <= rows + 1; r++) {
         const y = r * cellSize;
-        g += `<line x1="0" y1="${y}" x2="${totalCols * cellSize}" y2="${y}" class="grid-line" />`;
+        g += `<line x1="0" y1="${y}" x2="${totalColsWithExtra * cellSize}" y2="${y}" class="grid-line" />`;
     }
-    for (let c = 0; c <= totalCols; c++) {
+    for (let c = 0; c <= totalColsWithExtra; c++) {
         const x = c * cellSize;
         g += `<line x1="${x}" y1="0" x2="${x}" y2="${(rows + 1) * cellSize}" class="grid-line" />`;
     }
